k8-spec/prd-ns.yaml
{
  "kind": "Namespace",
  "apiVersion": "v1",
  "metadata": {
    "name": "prd",
    "labels": {
      "name": "prd"
    }
  }
}
