k8-spec/rchain-coop-deployment.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  namespace: dev
  name: rchain-coop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rchain-coop
  template:
    metadata:
      labels:
        app: rchain-coop
    spec:
      containers:
      - name: rchain-coop
        image: kayvank/rchain-coop:latest
        ports:
        - containerPort: 3000
        resources:
          limits:
            cpu: "1"
          requests:
            cpu: "0.5"
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 20
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 3
          periodSeconds: 2
