k8-spec/adminer-service.yaml

apiVersion: v1
kind: Service
metadata:
  name: db-adminer
  labels:
    app: db-adminer
spec:
  type: NodePort
  ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
  selector:
    app: db-adminer
