k8-spec/developer-rchain-coop-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: developer-rchain-coop
  labels:
    app: developer-rchain-coop
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: developer-rchain-coop
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: developer-rchain-coop
spec:
  replicas: 1
  selector:
    matchLabels:
      app: developer-rchain-coop
  template:
    metadata:
      labels:
        app: developer-rchain-coop
    spec:
      containers:
      - name: developer-rchain-coop
        image: kayvank/developer.rchain.coop:1.0-f9d91dc
        ports:
        - containerPort: 3000
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3000
          initialDelaySeconds: 5
          periodSeconds: 2
