k8-spec/developer-rchain-coop-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: developer-rchain-coop
  labels:
    app: developer-rchain-coop
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      protocol: TCP
      targetPort: 3000
  selector:
    app: developer-rchain-coop
