k8-spec/mysql-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress-mysql
  labels:
    app: wordpress
spec:
  type: NodePort
  ports:
    - port: 3306
  selector:
    app: wordpress
    tier: mysql
---
