k8-spec/postgres-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: developer-rchain-coop
spec:
  ports:
    - port: 5432
      protocol: TCP
      targetPort: 5432
  selector:
    app: developer-rchain-coop
    tier: postgres
