k8-spec/rchain-coop-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rchain-coop
  namespace: dev
  labels:
    app: rchain-coop
spec:
  type: NodePort
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: rchain-coop
