k8-spec/rsong-deployment.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rsong
  labels:
    app: rsong
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: rsong
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: rsong
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rsong
  template:
    metadata:
      labels:
        app: rsong
    spec:
      containers:
      - name: rsong
        image: kayvank/rsong:1.0-28db46d
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          timeoutSeconds: 2
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 2
