k8-spec/rsong-org-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: rsong-org
  namespace: dev
  labels:
    app: rsong-org
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
  selector:
    app: rsong-org
