k8-spec/wordpress-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: wordpress
  namespace: dev
  labels:
    app: wordpress
spec:
  type: NodePort
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: wordpress
