k8-spec/ingress-disabled.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: rchain-coop
  namespace: dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: www-rchain-coop
    # certmanager.k8s.io/cluster-issuer: rchain-coop-prd
    kubernetes.io/ingress.class: nginx
    # ingress.kubernetes.io/ssl-redirect: "true"
    # nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/tls-acme: 'true'
spec:
  rules:
  - host: rchain-coop.tk
    http:
      paths:
        - backend:
            serviceName: rchain-coop
            servicePort: 3000

  - host: blog-rchain-coop.tk
    http:
      paths:
        - backend:
            serviceName: wordpress
            servicePort: 80

  - host: developer-rchain-coop.tk
    http:
      paths:
        - backend:
            serviceName: developer-rchain-coop
            servicePort: 3000
  - host: rsong.cf
    http:
      paths:
        - backend:
            serviceName: developer-rchain-coop
            servicePort: 3000

  - host: wpdb-rchain-coop.tk
    http:
      paths:
        - backend:
            serviceName: db-adminer
            servicePort: 8080
          
#  tls:
#  - hosts:
#      - rchain.coop
# #      - blog.rchain.coop
#       - developer.rchain.coop
    #   - wpdb-rchain-coop.tk
    # secretName: tls-letsencrypt-prd
