k8-spec/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: dev-rchain-coop
  annotations:
    kubernetes.io/ingress.class: nginx
    kubernetes.io/ingress.global-static-ip-name: rchain-coop-ip
    certmanager.k8s.io/cluster-issuer: rchain-coop

spec:
  rules:
  - host: rchain.coop
    http:
      paths:
        - backend:
            serviceName: rchain-coop
            servicePort: 3000
  - host: www.rchain.coop
    http:
      paths:
        - backend:
            serviceName: rchain-coop
            servicePort: 3000


  - host: developer.rchain.coop
    http:
      paths:
        - backend:
            serviceName: developer-rchain-coop
            servicePort: 3000


  - host: rsong.rchain.coop
    http:
      paths:
        - backend:
            serviceName: rsong
            servicePort: 80


  - host: blog.rchain.coop
    http:
      paths:
        - backend:
            serviceName: wordpress
            servicePort: 80

  - host: dbadmin.rchain.coop
    http:
      paths:
        - backend:
            serviceName: db-adminer
            servicePort: 8080


  - host: faq.rchain.coop
    http:
      paths:
        - backend:
            serviceName: wordpress
            servicePort: 80

  tls:
  - hosts:
      - rchain.coop
      - www.rchain.coop
      - developer.rchain.coop
      - rsong.rchain.coop
      - blog.rchain.coop
      - dbadmin.rchain.coop
      - faq.rchain.coop

    secretName: tls-letsencrypt-rchain-coop
